--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,5 @@ services:
     name: all-ten-nutrition-api
     env: python
     plan: free
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app
-    envVars:
-      - key: PYTHON_VERSION
-        value: 3.11.9 
+    buildCommand: pip install -r requirements-simple.txt
+    startCommand: gunicorn app-simple:app 
