--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,5 @@ services:
     name: all-ten-nutrition-api
     env: python
     plan: free
-    buildCommand: echo "No build required - using built-in Python libraries"
-    startCommand: python app-minimal.py 
+    buildCommand: echo "No build required - using default Python"
+    startCommand: python3 app-railway.py 
