--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "All Ten Nutrition API with Google Cloud Vision integration"
 authors = ["Your Name <your.email@example.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "3.11.7"
 google-cloud-vision = "^3.4.4"
 Flask = "^3.0.0"
 Flask-CORS = "^4.0.0"
